feat: finish the lecture 0 summary

--- a/파이썬/CS50/AI/lecture0.ipynb
+++ b/파이썬/CS50/AI/lecture0.ipynb
@@ -137,6 +137,64 @@
     "    - h(n) = estimated cost to goal\n",
     "But! do not trust without estimating\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adversarial Search\n",
+    "\n",
+    "- like a game which has an opponent(tiktacto)\n",
+    "- has win, lose and drow(1, -1, 0)\n",
+    "\n",
+    "### Minimax algorithm\n",
+    "- Max: aims to maximize the score  \n",
+    "\n",
+    "- Min: aims to minimize the score  \n",
+    "\n",
+    "function\n",
+    "\n",
+    "#### Game \n",
+    "- S0: initial state\n",
+    "- Player(s): returns which player to move in state 's'\n",
+    "- Actions(s): returns legal moves in state 's'\n",
+    "- Result(s, a): returns state after action 'a' taken in the state 's'\n",
+    "- Terminal(s): checks if state 's' is a terminal state\n",
+    "    - false\n",
+    "    - true\n",
+    "- Utility(s): final numerical value for terminal state 's'\n",
+    "    - \"1\": win\n",
+    "    - \"-1\": lose\n",
+    "    - \"0\": drow\n",
+    "- Max/Min-Value(Result(s, a)): it calulate the value of the state\n",
+    "    - Max picks action a in Actions(s) that produces highest value of Min-Value(Result(s, a))\n",
+    "    - Min picks action a in Actions(s) that produces smallest value of Max-Value(Result(s, a))  \n",
+    "\n",
+    "#### Functions of Minimax\n",
+    "- function Max-Value(s):  \n",
+    "    - if Terminal(s):  \n",
+    "        - return Utility(s)  \n",
+    "    - v = -infinity  \n",
+    "    - for action in Actions(s):  \n",
+    "        - v = Max(v, Min-Value(Result(s, a)))\n",
+    "    - return v\n",
+    "\n",
+    "- function Min-Value(s):  \n",
+    "    - if Terminal(s):  \n",
+    "        - return Utility(s)  \n",
+    "    - v = +infinity  \n",
+    "    - for action in Actions(s):  \n",
+    "        - v = Min(v, Max-Value(Result(s, a)))\n",
+    "    - return v\n",
+    "\n",
+    "### Optimizations\n",
+    "- you don't need to do searching process if you are confident that you have a better solutions\n",
+    "- \"Alpha-Beta Pruning\"\n",
+    "\n",
+    "### Depth-limited Minimax\n",
+    "- it stops when reachs some amount of time\n",
+    "- \"evaluation function\": function that extimates the expected utility of the game from a given state(this function determins the value of AI)\n"
+   ]
   }
  ],
  "metadata": {
