feat: Update lecture0.ipynb
Fix wordings

--- a/파이썬/CS50/AI/lecture0.ipynb
+++ b/파이썬/CS50/AI/lecture0.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# lecture 0 : Artificial Intelligence\n",
     "\n",
-    "1. Search ---now\n",
+    "1. Search --- now\n",
     "2. Knowledge\n",
     "3. Uncertainty\n",
     "4. Optimization\n",
@@ -41,7 +41,7 @@
     "\n",
     "- goal test: way to determine whether a given state is a goal state\n",
     "\n",
-    "- past cost: numerical cost associated with a given path(which you should minimize)\n",
+    "- path cost: numerical cost associated with a given path(which you should minimize)\n",
     "\n",
     "- optimal solution: a solution that has the lowest path cost among all solutions\n",
     "\n",
