feat: fix catagory

--- a/파이썬/CS50/AI/lecture0.ipynb
+++ b/파이썬/CS50/AI/lecture0.ipynb
@@ -5,15 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# lecture 0 : Artificial Intelligence\n",
+    "# lecture 0 : Artificial Intelligence with Python\n",
     "\n",
-    "1. Search --- now\n",
-    "2. Knowledge\n",
-    "3. Uncertainty\n",
-    "4. Optimization\n",
-    "5. Learning\n",
-    "6. Neural Networks\n",
-    "7. Language"
+    "0. Search --- now\n",
+    "1. Knowledge\n",
+    "2. Uncertainty\n",
+    "3. Optimization\n",
+    "4. Learning\n",
+    "5. Neural Networks\n",
+    "6. Language"
    ]
   },
   {
