feat: update LeetCode/Longest Substring Without Repeating Characters.ipynb

--- a/파이썬/LeetCode/Longest Substring Without Repeating Characters.ipynb
+++ b/파이썬/LeetCode/Longest Substring Without Repeating Characters.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,27 +51,27 @@
     "                    charSet.remove(s[left])\n",
     "                    left += 1\n",
     "                charSet.add(s[right])\n",
-    "        return maxLength\n"
+    "        return maxLength, charSet\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "(4, {'a', 'e', 'k', 'w'})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution.lengthOfLongestSubstring(\"pwwkew\")"
+    "Solution.lengthOfLongestSubstring(\"aawwakew\")"
    ]
   }
  ],
