feat: add Static Method
explanations for principals of @staticmethod

--- a/파이썬/Class.ipynb
+++ b/파이썬/Class.ipynb
@@ -379,6 +379,54 @@
     "s3 = Circle('red', 5)\n",
     "print(s3.getArea())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Static Method\n",
+    "This method enables class to act while not changing anything original data file\n",
+    "\n",
+    "So they don't need \"self\" to represent incidents\n",
+    "\n",
+    "- Use define fucntion after \"@staticmethod\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "14\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Math:\n",
+    "    # their is no need to initialize\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def add5(x): # you don't need to wright self\n",
+    "        return x + 5\n",
+    "                 \n",
+    "    @staticmethod\n",
+    "    def add10(x):\n",
+    "        return x + 10\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def pr():\n",
+    "        print(\"run\")\n",
+    "\n",
+    "print(Math.add5(3))\n",
+    "print(Math.add10(4))\n",
+    "Math.pr()"
+   ]
   }
  ],
  "metadata": {
