feat: add examples

--- a/파이썬/LeetCode/Longest Palindromic Substring.ipynb
+++ b/파이썬/LeetCode/Longest Palindromic Substring.ipynb
@@ -11,7 +11,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Example 1:\n",
+    "\n",
+    "Input: s = \"babad\"\n",
+    "\n",
+    "Output: \"bab\"\n",
+    "\n",
+    "Explanation: \"aba\" is also a valid answer.\n",
+    "\n",
+    "- Example 2:\n",
+    "\n",
+    "Input: s = \"cbbd\"\n",
+    "\n",
+    "Output: \"bb\""
+   ]
   },
   {
    "cell_type": "code",
