feat: add some other example code of Revers Integer

--- a/파이썬/LeetCode/Reverse Integer.ipynb
+++ b/파이썬/LeetCode/Reverse Integer.ipynb
@@ -42,6 +42,29 @@
     "        return (-res if x < 0 else res) if res.bit_length() < 32 else 0\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fastest code(12ms)\n",
+    "class Solution:\n",
+    "    def reverse(self, x: int) -> int:\n",
+    "        MAX_INT = 2 ** 31 - 1 # 2,147,483,647\n",
+    "        MIN_INT = -2 ** 31    #-2,147,483,648\n",
+    "        reverse = 0\n",
+    "\n",
+    "        while x != 0:\n",
+    "            if reverse > MAX_INT / 10 or reverse < MIN_INT / 10:\n",
+    "                return 0\n",
+    "            digit = x % 10 if x > 0 else x % -10\n",
+    "            reverse = reverse * 10 + digit\n",
+    "            x = math.trunc(x / 10)\n",
+    "\n",
+    "        return reverse"
+   ]
   }
  ],
  "metadata": {
