feat: change little bit of comment

--- a/파이썬/LeetCode/Roman to Integer.ipynb
+++ b/파이썬/LeetCode/Roman to Integer.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# by GANJINAVEEN(beat 91% by using hashmap)\n",
+    "# by GANJINAVEEN(beat 91% by using hashtable)\n",
     "class Solution:\n",
     "    def romanToInt(self, s: str) -> int:\n",
     "        roman={\"I\":1,\"V\":5,\"X\":10,\"L\":50,\"C\":100,\"D\":500,\"M\":1000}\n",
