feat: add another example

--- a/파이썬/LeetCode/Longest Common Prefix.ipynb
+++ b/파이썬/LeetCode/Longest Common Prefix.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# My code beats 99.72% but it is still dirty...(making many if-statements)\n",
     "class Solution:\n",
     "    def longestCommonPrefix(self, strs):\n",
     "        # for exceptions\n",
@@ -82,6 +83,24 @@
    "source": [
     "a = Solution()\n",
     "a.longestCommonPrefix([\"flower\",\"flower\",\"flower\",\"flower\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OMG this is amazing.... so simple and beautiful..\n",
+    "class Solution:\n",
+    "    def longestCommonPrefix(self, strs):\n",
+    "        res = ''\n",
+    "        for i in range(len(strs[0])):\n",
+    "            for word in strs:\n",
+    "                if i == len(word) or strs[0][i] != word[i]:\n",
+    "                    return res\n",
+    "            res += word[i]\n",
+    "        return res"
    ]
   }
  ],
