feat: testing BITO

--- a/파이썬/LeetCode/Container With Most Water.ipynb
+++ b/파이썬/LeetCode/Container With Most Water.ipynb
@@ -57,7 +57,27 @@
     "        return res\n",
     "    \n",
     "# this code is fuctional(compairing every possible cases) but it exceeded the time limit\n",
-    "# O(n**2) time-complexity because of two-repetteive for-statement"
+    "# O(n**2) time-complexity because of two-repetteive for-statement\n",
+    "\n",
+    "# The code of BITO improved\n",
+    "class Solution:\n",
+    "    def maxArea(self, height: List[int]) -> int:\n",
+    "        left = 0\n",
+    "        right = len(height) - 1\n",
+    "        max_area = 0\n",
+    "        \n",
+    "        while left < right:\n",
+    "            width = right - left\n",
+    "            h = min(height[left], height[right])\n",
+    "            area = width * h\n",
+    "            max_area = max(max_area, area)\n",
+    "            \n",
+    "            if height[left] < height[right]:\n",
+    "                left += 1\n",
+    "            else:\n",
+    "                right -= 1\n",
+    "        \n",
+    "        return max_area"
    ]
   },
   {
