--- a/파이썬/LeetCode/3Sum.ipynb
+++ b/파이썬/LeetCode/3Sum.ipynb
@@ -11,6 +11,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Example 1:\n",
+    "\n",
+    "Input: nums = [-1,0,1,2,-1,-4]\n",
+    "\n",
+    "Output: [[-1,-1,2],[-1,0,1]]\n",
+    "\n",
+    "Explanation: \n",
+    "\n",
+    "nums[0] + nums[1] + nums[2] = (-1) + 0 + 1 = 0.\n",
+    "\n",
+    "nums[1] + nums[2] + nums[4] = 0 + 1 + (-1) = 0.\n",
+    "\n",
+    "nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0.\n",
+    "\n",
+    "The distinct triplets are [-1,0,1] and [-1,-1,2].\n",
+    "\n",
+    "Notice that the order of the output and the order of the triplets does not matter.\n",
+    "\n",
+    "- Example 2:\n",
+    "\n",
+    "Input: nums = [0,1,1]\n",
+    "\n",
+    "Output: []\n",
+    "\n",
+    "Explanation: The only possible triplet does not sum up to 0.\n",
+    "\n",
+    "- Example 3:\n",
+    "\n",
+    "Input: nums = [0,0,0]\n",
+    "\n",
+    "Output: [[0,0,0]]\n",
+    "\n",
+    "Explanation: The only possible triplet sums up to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# their is an wrong answer in the testcases\n",
+    "\n",
+    "def split(nums):\n",
+    "    l1 = []\n",
+    "    l2 = []\n",
+    "    l3 = []\n",
+    "    for i in nums:\n",
+    "        if i < 0:\n",
+    "            l1.append(i)\n",
+    "        elif i >0:\n",
+    "            l2.append(i)\n",
+    "        else:\n",
+    "            l3.append(i)\n",
+    "    return l1, l2, l3\n",
+    "\n",
+    "class Solution:\n",
+    "    def threeSum(self, nums):\n",
+    "        res = []\n",
+    "        l1, l2, l3 = split(nums)\n",
+    "        if l1 == [] and l2 == [] and len(l3)>=3:\n",
+    "            return [[0, 0, 0]]\n",
+    "        for i in range(len(l1)):\n",
+    "            for j in range(len(l2)):\n",
+    "                k = l1[i]+l2[j]\n",
+    "                if k < 0:\n",
+    "                    if j == len(l2)-1:\n",
+    "                        break\n",
+    "                    if -k in l2[j+1:] and [l1[i],l2[j],-k] not in res:\n",
+    "                        res.append([l1[i],l2[j],-k])\n",
+    "                elif k > 0:\n",
+    "                    if j == len(l1)-1:\n",
+    "                        break\n",
+    "                    if -k in l1[i+1:] and [l1[i],l2[j],-k] not in res:\n",
+    "                        res.append([l1[i],l2[j],-k])\n",
+    "                else:\n",
+    "                    if l3 != [] and [l1[i],l2[j],0] not in res:\n",
+    "                        res.append([l1[i],l2[j],0])\n",
+    "        return res\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,22 +104,177 @@
    "source": [
     "class Solution:\n",
     "    def threeSum(self, nums):\n",
-    "        l = len(nums)\n",
-    "        sum = 0\n",
-    "        for i in len(nums):\n",
-    "            for j in nums[i+1:]:\n",
-    "                sum = nums[i]+j\n",
-    "                if sum > 0:\n",
-    "                    \n",
+    "        res = []\n",
+    "        l1, l2, l3 = [], [], []\n",
+    "        \n",
+    "        # Split the input list into three separate lists\n",
+    "        for i in nums:\n",
+    "            if i < 0:\n",
+    "                l1.append(i)\n",
+    "            elif i > 0:\n",
+    "                l2.append(i)\n",
+    "            else:\n",
+    "                l3.append(i)\n",
+    "        \n",
+    "        seen = set()  # Set to store seen triplets\n",
+    "        \n",
+    "        for i in range(len(l1)):\n",
+    "            for j in range(len(l2)):\n",
+    "                k = l1[i] + l2[j]\n",
+    "                if k < 0 and -k in l2[j+1:]:\n",
+    "                    triplet = [l1[i], l2[j], -k]\n",
+    "                    triplet.sort()  # Sort the triplet to handle duplicates\n",
+    "                    if tuple(triplet) not in seen:\n",
+    "                        res.append(triplet)\n",
+    "                        seen.add(tuple(triplet))\n",
+    "                elif k > 0 and -k in l1[i+1:]:\n",
+    "                    triplet = [l1[i], l2[j], -k]\n",
+    "                    triplet.sort()\n",
+    "                    if tuple(triplet) not in seen:\n",
+    "                        res.append(triplet)\n",
+    "                        seen.add(tuple(triplet))\n",
+    "                elif k == 0 and l3:\n",
+    "                    triplet = [l1[i], l2[j], 0]\n",
+    "                    triplet.sort()\n",
+    "                    if tuple(triplet) not in seen:\n",
+    "                        res.append(triplet)\n",
+    "                        seen.add(tuple(triplet))\n",
+    "        \n",
+    "        # Sort the result list\n",
+    "        res.sort()\n",
+    "        \n",
+    "        # Add [0, 0, 0] at the end of the result list if needed\n",
+    "        if len(l3) >= 3:\n",
+    "            res.append([0, 0, 0])\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def threeSum(self, nums):\n",
+    "        res = []\n",
+    "        nums.sort()\n",
+    "        for i in range(len(nums) - 2):\n",
+    "            if i > 0 and nums[i] == nums[i - 1]:\n",
+    "                continue\n",
+    "            l, r = i + 1, len(nums) - 1\n",
+    "            while l < r:\n",
+    "                total = nums[i] + nums[l] + nums[r]\n",
+    "                if total < 0:\n",
+    "                    l += 1\n",
+    "                elif total > 0:\n",
+    "                    r -= 1\n",
     "                else:\n",
+    "                    res.append([nums[i], nums[l], nums[r]])\n",
+    "                    while l < r and nums[l] == nums[l + 1]:\n",
+    "                        l += 1\n",
+    "                    while l < r and nums[r] == nums[r - 1]:\n",
+    "                        r -= 1\n",
+    "                    l += 1\n",
+    "                    r -= 1\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code by rowe1227(beat 95%)\n",
+    "class Solution():\n",
+    "    def threeSum(self, nums: List[int]) -> List[List[int]]:\n",
     "\n",
-    "\n"
+    "        res = set()\n",
+    "\n",
+    "        #1. Split nums into three lists: negative numbers, positive numbers, and zeros\n",
+    "        n, p, z = [], [], []\n",
+    "        for num in nums:\n",
+    "            if num > 0:\n",
+    "                p.append(num)\n",
+    "            elif num < 0: \n",
+    "                n.append(num)\n",
+    "            else:\n",
+    "                z.append(num)\n",
+    "\n",
+    "        #2. Create a separate set for negatives and positives for O(1) look-up times\n",
+    "        N, P = set(n), set(p)\n",
+    "\n",
+    "        #3. If there is at least 1 zero in the list, add all cases where -num exists in N and num exists in P\n",
+    "        #   i.e. (-3, 0, 3) = 0\n",
+    "        if z:\n",
+    "            for num in P:\n",
+    "                if -1*num in N:\n",
+    "                    res.add((-1*num, 0, num))\n",
+    "\n",
+    "        #3. If there are at least 3 zeros in the list then also include (0, 0, 0) = 0\n",
+    "        if len(z) >= 3:\n",
+    "            res.add((0,0,0))\n",
+    "\n",
+    "        #4. For all pairs of negative numbers (-3, -1), check to see if their complement (4)\n",
+    "        #   exists in the positive number set\n",
+    "        for i in range(len(n)):\n",
+    "            for j in range(i+1,len(n)):\n",
+    "                target = -1*(n[i]+n[j])\n",
+    "                if target in P:\n",
+    "                    res.add(tuple(sorted([n[i],n[j],target])))\n",
+    "\n",
+    "        #5. For all pairs of positive numbers (1, 1), check to see if their complement (-2)\n",
+    "        #   exists in the negative number set\n",
+    "        for i in range(len(p)):\n",
+    "            for j in range(i+1,len(p)):\n",
+    "                target = -1*(p[i]+p[j])\n",
+    "                if target in N:\n",
+    "                    res.add(tuple(sorted([p[i],p[j],target])))\n",
+    "\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-1, 1, 0], [-1, 2, -1]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Solution()\n",
+    "a.threeSum([-1,0,1,2,-1,-4])"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
