--- a/파이썬/LeetCode/Letter Combinations of a Phone Number.ipynb
+++ b/파이썬/LeetCode/Letter Combinations of a Phone Number.ipynb
@@ -143,6 +143,59 @@
     "result = solution.letterCombinations(\"23\")\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Solved by danieloi\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43;01mSolution\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43mletterCombinations\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mList\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m:\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m, in \u001b[0;36mSolution\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSolution\u001b[39;00m:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mletterCombinations\u001b[39m(\u001b[38;5;28mself\u001b[39m, digits: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mList\u001b[49m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m digits:\n\u001b[0;32m      5\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m []\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Solved by danieloi\n",
+    "class Solution:\n",
+    "    def letterCombinations(self, digits: str) -> List[str]:\n",
+    "        if not digits:\n",
+    "            return []\n",
+    "\n",
+    "        # Mapping the digits to their corresponding letters\n",
+    "        digit_mapping = {\n",
+    "            '2': 'abc', '3': 'def', '4': 'ghi', '5': 'jkl', \n",
+    "            '6': 'mno', '7': 'pqrs', '8': 'tuv', '9': 'wxyz'\n",
+    "        }\n",
+    "\n",
+    "        combinations = []\n",
+    "        self.backtrack(0, [], digits, digit_mapping, combinations)\n",
+    "        return combinations\n",
+    "\n",
+    "    def backtrack(self, index: int, path: List[str], digits: str, letters: dict, combinations: List[str]):\n",
+    "        # If the length of path and digits is same, we have a complete combination\n",
+    "        if len(path) == len(digits):\n",
+    "            combinations.append(''.join(path))\n",
+    "            return\n",
+    "        \n",
+    "        # Get the list of letters using the index and digits[index]\n",
+    "        possible_letters = letters[digits[index]]\n",
+    "        \n",
+    "        for letter in possible_letters:\n",
+    "            # Add the current letter to the path\n",
+    "            path.append(letter)\n",
+    "            # Recursively explore the next digit\n",
+    "            self.backtrack(index + 1, path, digits, letters, combinations)\n",
+    "            # Remove the current letter from the path before backtracking to explore other combinations\n",
+    "            path.pop()"
+   ]
   }
  ],
  "metadata": {
