--- a/파이썬/Computer Vision/E1.ipynb
+++ b/파이썬/Computer Vision/E1.ipynb
@@ -688,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".cv1",
    "language": "python",
    "name": "python3"
   },
@@ -702,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
